bob and ray work together

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    .socialmediaicons ul li{
+        list-style: none;
+        display: inline;
+    }
+    .socialmediaicons img{
+        width: 60px;
+        height: 60px;
+    }
+    </style>
 </head>
 <body>
     
+<!--<nav class="socialmediaicons"></nav>
+<nav class="socialmediaicons"></nav>
+<nav class="socialmediaicons"></nav>-->
 
-<script src="js/example2.js"></script>
+
+<script src="js/example5.js"></script>
 </body>
 </html>
